# rcw-python-full-bid

./: .dockerignore  .env.example  .gitignore  API_CONTRACT.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  EXTRACTION_SERVICE.md  Makefile  QUICKSTART.md  QUICKSTART_LOCAL.md  QUICKSTART_NEXTJS.md  README.md  TAKEOFF_SERVICE.md  baycrest_response.json  create_baycrest_test_file.py  create_baycrest_variation.py  debug_sheets_issue.py  docker-compose.yml  improvements_test_response.json  job_details.json  migrate_database.py  nextjs_integration_example.tsx  pyproject.toml  requirements.txt  simple_test.xlsx  test_edge.xlsx  test_file_2.xlsx  test_file_3.xlsx  test_normal.xlsx
.github/workflows/: ci.yml
alembic/: env.py
app/: __init__.py  main.py
app/api/: deps.py
app/core/: config.py  logging.py  security.py
app/db/: session.py
app/models/: job.py  takeoff_job.py  user.py
app/schemas/: __init__.py  job.py  token.py  user.py
app/services/: __init__.py  baycrest_normalizer.py  bid_excel_service.py  canonical_id.py  classification_utils.py  extraction_service.py  extraction_stats.py  file_storage_service.py  (+5 more)
bid-sample-test-inputs/: document2-bid-input.xlsx
bid-sample-test-outputs/: bid-output.xlsx
config/: baycrest_v1.mapping.json  bid_catalog.json  rc_wendt_v1.mapping.json
examples/: generate_sample_excel.py
scripts/: create_migration.sh  dev.sh  migrate.sh  setup_extraction_service.sh  worker.sh
tests/: __init__.py  conftest.py  test_auth.py  test_bid_excel_service.py  test_client_input_pipeline.py  test_health.py  test_jobs.py  test_services.py  test_smoke.py  test_takeoff_extraction.py  test_users.py
(+105 files in other folders)
